--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "ᴀɴᴏɴ ダ ᴍᴜsɪᴄ",
+    "name": "𝐇𝐀𝐍𝐂𝐎𝐂𝐊 ✘ 𝐌𝐔𝐒𝐈𝐂",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://te.legra.ph/file/b8a0c1a00db3e57522b53.jpg",
+    "logo": "https://https://telegra.ph//file/73ad0591390f6f0bf921a.jpg",
     "keywords": [
     "python3",
     "telegram",
